@@ -93,24 +93,24 @@ end
 
 -- User-changeable options
 
-dfhack.HIDE_CONSOLE_ON_STARTUP = true
+local HIDE_CONSOLE_ON_STARTUP = true
 ---@nodiscard
 ---@return boolean
 function dfhack.getHideConsoleOnStartup()
-    return dfhack.HIDE_CONSOLE_ON_STARTUP
+    return HIDE_CONSOLE_ON_STARTUP
 end
 function dfhack.setHideConsoleOnStartup(value)
-    dfhack.HIDE_CONSOLE_ON_STARTUP = value
+    HIDE_CONSOLE_ON_STARTUP = value
 end
 
-dfhack.HIDE_ARMOK_TOOLS = false
+local HIDE_ARMOK_TOOLS = false
 ---@nodiscard
 ---@return boolean
 function dfhack.getMortalMode()
-    return dfhack.HIDE_ARMOK_TOOLS
+    return HIDE_ARMOK_TOOLS
 end
 function dfhack.setMortalMode(value)
-    dfhack.HIDE_ARMOK_TOOLS = value
+    HIDE_ARMOK_TOOLS = value
     dfhack.internal.setMortalMode(value)
 end
 
